SONAR-19705 Prevent Spring to log in DEBUG mode